compatibility-tests/compile-fail/tests/ui/error-reporting.stderr
error: Can only derive `Snafu` for an enum or a newtype
 --> $DIR/error-reporting.rs:5:5
  |
5 |     union AUnion {
  |     ^^^^^

error: Only struct-like and unit enum variants are supported
  --> $DIR/error-reporting.rs:11:14
   |
11 |         Alpha(i32),
   |              ^^^^^

error: unexpected end of input, expected parentheses or `=`
  --> $DIR/error-reporting.rs:30:16
   |
30 |         #[snafu(display)]
   |                ^^^^^^^^^

error: expected string literal
  --> $DIR/error-reporting.rs:33:27
   |
33 |         #[snafu(display = 42)]
   |                           ^^

error: format argument must be a string literal
  --> $DIR/error-reporting.rs:39:25
   |
39 |         #[snafu(display(foo()))]
   |                         ^^^^^
   |
help: you might be missing a string literal to format with
   |
39 |         #[snafu(display("{}", foo()))]
   |                         ^^^^^

error: format argument must be a string literal
  --> $DIR/error-reporting.rs:42:27
   |
42 |         #[snafu(display = "42")]
   |                           ^^^^
   |
help: you might be missing a string literal to format with
   |
42 |         #[snafu(display = "{}", "42")]
   |                           ^^^^^

error: Can only derive `Snafu` for tuple structs with exactly one field
  --> $DIR/error-reporting.rs:59:5
   |
59 |     struct ShortTupleStruct();
   |     ^^^^^^

error: Can only derive `Snafu` for tuple structs with exactly one field
  --> $DIR/error-reporting.rs:62:5
   |
62 |     struct LongTupleStruct(i32, i32);
   |     ^^^^^^

error: cannot find attribute `serde` in this scope
  --> $DIR/error-reporting.rs:20:11
   |
20 |         #[serde]
   |           ^^^^^
